--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
